# trait-based-state-machine

./: Cargo.toml  README.md
src/: main.rs
state/: Cargo.toml
state/src/: lib.rs
switchsm/: Cargo.toml
switchsm/src/: lib.rs  main.rs
