[workspace]
members = [
  "state",
  "switchsm",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Wink Saville<wink@saville.com>" ]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true